# hlex

./: .gitignore  cabal.haskell-ci  cabal.project  flake.nix  hlex.cabal  ilex.cabal
.github/workflows/: haskell-ci.yml
components/internal/: Accept.hs  AssocList.hs  Char.hs  CharSet.hs  Dfa.hs  Lexer.hs  Minimize.hs  Range.hs  Runtime.hs  Utils.hs
components/internal-test/: MinimizeTest.hs  RangeMapTest.hs  RangeTest.hs
components/internal/Regex/: Core.hs  Dsl.hs  Syntax.hs
components/internal/Text/HLex/Internal/: Nfa.hs  NfaToDfa.hs  RangeMap.hs  Regex.hs  RegexToNfa.hs
components/test/: Main.hs
src/: Hlex.hs  Ilex.hs
src/Hlex/: CharSet.hs  Regex.hs
src/Hlex/Internal/: AssocList.hs  Backend.hs  ByteString.hs  CharSet.hs  Dfa.hs  Driver.hs  Minimize.hs  Monad.hs  Nfa.hs  NfaToDfa.hs  Prim.hs  Regex.hs  RegexToNfa.hs  Rule.hs  Utf8.hs  Utils.hs
src/Hlex/Internal/Backend/: Table.hs
src/Ilex/: CharSet.hs  Regex.hs
src/Ilex/Internal/: AssocList.hs  Backend.hs  ByteSet.hs  ByteString.hs  CharSet.hs  Codegen.hs  Dfa.hs  Driver.hs  Lexer.hs  Minimize.hs  Monad.hs  Nfa.hs  NfaToDfa.hs  Prim.hs  Regex.hs  RegexToNfa.hs  Rule.hs  Runtime.hs  Utf8.hs  Utils.hs
src/Ilex/Internal/Backend/: Fun.hs  Table.hs
src/Ilex/Internal/Regex/: Parser.hs
src/Text/: HLex.hs
src/Text/HLex/Internal/: Accept.hs  AssocList.hs  ByteSet.hs  Char.hs  CharSet.hs  Codegen.hs  Dfa.hs  Lexer.hs  Minimize.hs  Nfa.hs  NfaToDfa.hs  Range.hs  RangeMap.hs  RangeSet.hs  Regex.hs  RegexToNfa.hs  Runtime.hs  Utf8.hs  Utf8Range.hs  Utils.hs
src/Text/HLex/Internal/Dfa/: Simulate.hs
src/Text/HLex/Internal/Regex/: Ast.hs  Core.hs  Dsl.hs  Parser.hs  Syntax.hs
test/: ContextTest.hs  LexerTest.hs  LexerUtils.hs  LuaRegex.hs  LuaTest.hs  Main.hs  MinimizeTest.hs  RangeMapTest.hs  RangeTest.hs  Regex.hs  RegexTest.hs  SimpleTest.hs  TestUtils.hs  Utf8RangeTest.hs  Utf8Test.hs
test/Lua/: Lexer.hs  Token.hs
test/Lua/Lexer/: Monad.hs  Regex.hs  String.hs
testdata/ContextTest/: smoke.golden
testdata/LexerTest/: invalid_escapes.golden  smoke.golden  strings.golden
testdata/SimpleTest/: prefix.golden
