cabal-version:      3.8
name:               hlex
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             brian
maintainer:         littlebubu.shu@gmail.com

flag lld
  manual: True
  default: False

-- A copyright notice.
-- copyright:
-- category:

extra-source-files:
  CHANGELOG.md

common common-library
  default-language: GHC2021
  default-extensions:
    LambdaCase,
    OverloadedStrings,
    DuplicateRecordFields,
    DataKinds,
    GADTs,
    ViewPatterns,
    PatternSynonyms,
    TypeFamilies,
    TypeFamilyDependencies,
    FunctionalDependencies,
    OverloadedLabels,
    ImportQualifiedPost,
    ImpredicativeTypes,
    LexicalNegation,
    NoStarIsType,
    NoGeneralizedNewtypeDeriving,
    DerivingVia,
    PartialTypeSignatures,
    PackageImports
  ghc-options:
    -Wall
    -Wredundant-constraints
    -Wno-name-shadowing
    -- until OverloadedRecordUpdate stabilizes
    -- -Wno-ambiguous-fields
    -Wno-partial-type-signatures
    -Werror=incomplete-patterns
    -Werror=incomplete-uni-patterns
    -Werror=missing-methods
    -Werror=incomplete-record-updates
    -Wcpp-undef
    -Widentities
  build-depends:
    base >= 4.12 && <5,

library
  import: common-library
  hs-source-dirs: components/lib
  exposed-modules:
    Lib
  build-depends: hlex:core

library core
  import: common-library
  visibility: public
  hs-source-dirs: components/core
  exposed-modules:
    Lib
  build-depends: hlex:internal

library unicode
  import: common-library
  visibility: public
  hs-source-dirs: components/unicode
  exposed-modules:
    Lib
    
library th
  import: common-library
  visibility: public
  hs-source-dirs: components/th
  exposed-modules:
    Lib
  build-depends:
    template-haskell

common internal-deps
  build-depends:
    text ^>= 2.0,
    template-haskell ^>= 2.18.0.0,
    unordered-containers ^>= 0.2.19.1,
    hashable ^>= 1.4.0.2,
    containers ^>= 0.6.5.1,
    pvector ^>= 0.1.0.1,
    mtl ^>= 2.2.2,
    primitive ^>= 0.7.0.0,
    vector ^>= 0.12.3.1,
    megaparsec ^>= 9.2.1,
    
library internal
  import: common-library, internal-deps
  visibility: private
  hs-source-dirs: components/internal
  exposed-modules:
    Char
    Dfa
    Nfa
    RegexToNfa
    NfaToDfa
    Minimize
    Range
    RangeMap
    CharSet
    Lexer
    Accept
    Regex.Core
    Regex.Dsl
    AssocList
    Runtime

common common-rtsopts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

common common-test
  import: common-library, common-rtsopts
  build-depends:
    tasty ^>= 1.4.2.3,
    tasty-quickcheck ^>= 0.10.2,
    tasty-hunit ^>= 0.10.0.3,
    QuickCheck ^>= 2.14.2,
    quickcheck-instances ^>= 0.3.27,
  build-tool-depends:
    tasty-discover:tasty-discover
  
test-suite test
  import: common-test
  main-is: Main.hs
  hs-source-dirs: components/test
  build-depends:
    hlex

test-suite internal-test
  import: common-test, internal-deps
  main-is: Main.hs
  hs-source-dirs: components/internal-test
  build-depends: hlex:internal
  other-modules:
    RangeMapTest
    RangeTest
    MinimizeTest
    
common common-bench
  import: common-library, common-rtsopts
  build-depends:
    gauge ^>= 0.2.5,

benchmark bench
  import: common-bench
  hs-source-dirs: components/bench
  main-is: Main.hs
  build-depends:
    hlex
