cabal-version:      3.6
name:               hlex
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             brian
maintainer:         littlebubu.shu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-options
  default-language: GHC2021
  default-extensions:
    LambdaCase,
    OverloadedStrings,
    DuplicateRecordFields,
    DataKinds,
    GADTs,
    ViewPatterns,
    PatternSynonyms,
    TypeFamilies,
    TypeFamilyDependencies,
    FunctionalDependencies,
    OverloadedLabels,
    ImportQualifiedPost,
    ImpredicativeTypes,
    LexicalNegation,
    NoStarIsType,
    NoGeneralizedNewtypeDeriving,
    DerivingVia,
    PartialTypeSignatures,
    BlockArguments,
  ghc-options:
    -Wall
    -Wredundant-constraints
    -Wno-name-shadowing
    -- until OverloadedRecordUpdate stabilizes
    -- -Wno-ambiguous-fields
    -Wno-partial-type-signatures
    -- -Werror=incomplete-patterns
    -- -Werror=incomplete-uni-patterns
    -Werror=missing-methods
    -Werror=incomplete-record-updates
    -Wcpp-undef
    -Widentities
  build-depends:
    base >= 4.12 && <5,
    text ^>= 2.0,
    bytestring,
    template-haskell ^>= 2.18.0.0,
    unordered-containers,
    hashable,
    containers,
    pvector,
    mtl,
    primitive,
    vector,
    range-set-list,
    intervals,
    megaparsec,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Text.HLex
      Text.HLex.Internal.CharSet
      Text.HLex.Internal.Utf8
      Text.HLex.Internal.Utils
      Text.HLex.Internal.Dfa
      Text.HLex.Internal.Nfa
      Text.HLex.Internal.RegexToNfa
      Text.HLex.Internal.NfaToDfa
      Text.HLex.Internal.Minimize
      Text.HLex.Internal.Lexer
      Text.HLex.Internal.Regex
      Text.HLex.Internal.AssocList
      Text.HLex.Internal.Runtime
    

common rtsopts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

executable hlex-exe
  import: common-options, rtsopts
  main-is: Main.hs
  -- Modules included in this executable, other than Main.
  -- other-modules:
  build-depends:
    hlex
  hs-source-dirs: app
  
test-suite hlex-test
  import: common-options, rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    MinimizeTest
    RegexTest
    Utf8Test
  build-depends:
    hlex,
    tasty,
    tasty-hedgehog,
    hedgehog,
    tasty-hunit,

benchmark hlex-bench
  import: common-options, rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
    hlex,
    tasty-bench ^>= 0.3.1,
