cabal-version:      3.6
name:               hlex
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             brian
maintainer:         littlebubu.shu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

tested-with: GHC == 9.2.6, GHC == 9.4.4, GHC == 9.6.1

common common-options
  default-language: GHC2021
  default-extensions:
    LambdaCase,
    OverloadedStrings,
    DuplicateRecordFields,
    DataKinds,
    GADTs,
    ViewPatterns,
    PatternSynonyms,
    TypeFamilies,
    TypeFamilyDependencies,
    FunctionalDependencies,
    OverloadedLabels,
    ImportQualifiedPost,
    ImpredicativeTypes,
    LexicalNegation,
    NoStarIsType,
    NoGeneralizedNewtypeDeriving,
    DerivingVia,
    PartialTypeSignatures,
    BlockArguments,
    MagicHash,
    UnboxedTuples,
    UnliftedNewtypes,
  ghc-options:
    -Wall
    -Wredundant-constraints
    -Wno-name-shadowing
    -- until OverloadedRecordUpdate stabilizes
    -- -Wno-ambiguous-fields
    -Wno-partial-type-signatures
    -Wno-unticked-promoted-constructors
    -- -Werror=incomplete-patterns
    -- -Werror=incomplete-uni-patterns
    -Werror=missing-methods
    -Werror=incomplete-record-updates
    -Wcpp-undef
    -Widentities
  build-depends:
    base >= 4.12 && <5,
    text >= 2.0,
    bytestring,
    template-haskell >= 2.18.0.0,
    unordered-containers,
    hashable,
    containers,
    pvector >= 0.1.1,
    mtl,
    primitive,
    vector,
    range-set-list,
    intervals,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Hlex
      Hlex.CharSet
      Hlex.Regex
        Hlex.Internal.Monad
        Hlex.Internal.CharSet
        Hlex.Internal.Driver
        Hlex.Internal.Backend
          Hlex.Internal.Backend.Table
        Hlex.Internal.Utf8
        Hlex.Internal.Utils
        Hlex.Internal.Dfa
        Hlex.Internal.Nfa
        Hlex.Internal.RegexToNfa
        Hlex.Internal.NfaToDfa
        Hlex.Internal.Minimize
        Hlex.Internal.Rule
        Hlex.Internal.Regex
        Hlex.Internal.AssocList
        Hlex.Internal.ByteString
        Hlex.Internal.Prim
    

common rtsopts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite hlex-test
  import: common-options, rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Lua.Lexer
    Lua.Token
    Lua.Lexer.String
    Lua.Lexer.Regex
    Lua.Lexer.Monad
    LuaTest
    LexerUtils
    TestUtils
    MinimizeTest
    LexerTest
    RegexTest
    Utf8Test
    SimpleTest
    ContextTest
  build-depends:
    hlex,
    tasty,
    tasty-hedgehog,
    tasty-golden,
    hedgehog,
    tasty-hunit,
    pretty-simple,
    filepath,

benchmark hlex-bench
  import: common-options, rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
    hlex,
    tasty-bench ^>= 0.3.1,
