cabal-version:      3.6
name:               ilex
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             brian
maintainer:         littlebubu.shu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-options
  default-language: GHC2021
  default-extensions:
    LambdaCase,
    OverloadedStrings,
    DuplicateRecordFields,
    DataKinds,
    GADTs,
    ViewPatterns,
    PatternSynonyms,
    TypeFamilies,
    TypeFamilyDependencies,
    FunctionalDependencies,
    OverloadedLabels,
    ImportQualifiedPost,
    ImpredicativeTypes,
    LexicalNegation,
    NoStarIsType,
    NoGeneralizedNewtypeDeriving,
    DerivingVia,
    PartialTypeSignatures,
    BlockArguments,
    MagicHash,
    UnboxedTuples,
    UnliftedNewtypes,
  ghc-options:
    -Wall
    -Wredundant-constraints
    -Wno-name-shadowing
    -- until OverloadedRecordUpdate stabilizes
    -- -Wno-ambiguous-fields
    -Wno-partial-type-signatures
    -Wno-unticked-promoted-constructors
    -- -Werror=incomplete-patterns
    -- -Werror=incomplete-uni-patterns
    -Werror=missing-methods
    -Werror=incomplete-record-updates
    -Wcpp-undef
    -Widentities
  build-depends:
    base >= 4.12 && <5,
    text >= 2.0,
    bytestring,
    template-haskell >= 2.18.0.0,
    unordered-containers,
    hashable,
    containers,
    pvector,
    mtl >= 2.3.1,
    primitive,
    vector,
    range-set-list,
    intervals,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Ilex
      Ilex.Regex
        Ilex.Internal.Monad
        Ilex.Internal.CharSet
        Ilex.Internal.Driver
        Ilex.Internal.Backend
          Ilex.Internal.Backend.Fun
          Ilex.Internal.Backend.Table
        Ilex.Internal.Utf8
        Ilex.Internal.Utils
        Ilex.Internal.Dfa
        Ilex.Internal.Nfa
        Ilex.Internal.RegexToNfa
        Ilex.Internal.NfaToDfa
        Ilex.Internal.Minimize
        Ilex.Internal.Rule
        Ilex.Internal.Regex
        Ilex.Internal.AssocList
        Ilex.Internal.Runtime
        Ilex.Internal.ByteString
        Ilex.Internal.Prim
    

common rtsopts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite ilex-test
  import: common-options, rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    LexerUtils
    TestUtils
    MinimizeTest
    LexerTest
    RegexTest
    Utf8Test
    SimpleTest
    ContextTest
  build-depends:
    ilex,
    tasty,
    tasty-hedgehog,
    tasty-golden,
    hedgehog,
    tasty-hunit,
    pretty-simple,
    filepath,

benchmark ilex-bench
  import: common-options, rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
    ilex,
    tasty-bench ^>= 0.3.1,
